# voxel_landscape

./: CMakeLists.txt  ideas.txt
images/: height_map.ppm  texture.ppm
src/: array2.hpp  camera.cpp  camera.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  main.cpp  window.cpp  window.hpp
